# factorial

./: .gitignore  CMakeLists.txt  README.md
include/: factorial.h
src/: main.cpp
tests/: test_factorial.cpp
